# ambisonic-encoder

./: CMakeLists.txt  readme.md
mac/: Info.plist  ambiEncoderPrefix.pch
source/: Encoder.cpp  Encoder.h  Ramp.cpp  Ramp.h  ambiEncoderController.cpp  ambiEncoderController.h  ambiEncoderIDs.h  ambiEncoderProcessor.cpp  ambiEncoderProcessor.h  factory.cpp  macros.h  version.h
